--- a/authservice/authservice-dev.yml
+++ b/authservice/authservice-dev.yml
@@ -1,10 +1,14 @@
-a:
-  b:
-    c: 100
-another.value: "abcd"
-a.list:
-  - 1
-  - 2
-  - 3
-  - 5
-  
+spring:
+  jpa:
+    database: "POSTGRESQL"
+    show-sql: "true"
+    properties:
+      hibernate:
+        dialect: "org.hibernate.dialect.PostgreSQLDialect"
+  datasource:
+    platform: "postgres"
+    url: "jdbc:postgresql://localhost:5432/tropiscum"
+    username: "tropiscum"
+    password: "tropiscum"
+    testWhileIdle: "true"
+    validationQuery: "SELECT 1"
