--- a/authservice/authservice-prod.yml
+++ b/authservice/authservice-prod.yml
@@ -12,3 +12,11 @@ spring:
     password: "tropiscum"
     testWhileIdle: "true"
     validationQuery: "SELECT 1"
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
