--- a/licensingservice/licensingservice.yml
+++ b/licensingservice/licensingservice.yml
@@ -20,3 +20,5 @@ eureka:
     fetchRegistry: true
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
+example:
+  property: "licensingService Property"
